--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>practicas de git</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <h1>hola mundo de git  desde vscode</h1>
