--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>hola mundo de git  desde vscode</h1>
+    <main id="principal">
+        <p class="negrita">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus expedita facere rem quidem saepe! Dignissimos libero quibusdam explicabo, consectetur temporibus labore repellat magnam. Obcaecati sunt repellendus tempora, eveniet neque cupiditate.</p>
+    </main>
     <script src="js/app.js"></script>
 </body>
 </html>
